css/main.css
/* ... */
.ticket_details {
    position: absolute;
    top: 38%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
}

.ticket_details h6 {
    font-family:'Eagle Lake';
    font-size: 26px;
    font-weight: 400;
    color: var(--ticket_font_color);
    display: flex;
    align-items: center;
    flex-direction: column;
    padding-bottom: 10px;
}

.ticket_details h6 span {
    font-family: 'Eagle Lake';
    font-size: 18px;
    font-weight: 400;
    color: var(--ticket_font_color);
}

.ticket_details_grid {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.ticket_details_column1 {
    grid-column: 1;
}

.ticket_details_column2 {
    grid-column: 2/4;
    padding-left: 30px;
}

.ticket_details_column1 p, .ticket_details_column2 p {
    font-family: 'Afacad';
    font-size: 16px;
    font-weight: 400;
    color: var(--ticket_font_color);
}

.ticket_details_column1 p span, .ticket_details_column2 p span {
    font-family: 'Afacad';
    font-size: 16px;
    font-weight: 700;
    color: var(--ticket_font_color);
}

.ticket_details_button {
    display: flex;
    justify-content: center;
    padding-top: 1%;
}

.ticket_details_button button:hover, .footer_info_button button:hover {
    background-color: var(--headline_hero_color);
}

.ticket_details_button button {
    background-color: var(--ticket_font_color);
    border-radius: 10px;
    height: 42px;
    width: 170px;
    border: none;
    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.4);
}

.ticket_details_button button a {
    font-family: 'Afacad';
    font-size: 16px;
    text-transform: uppercase;
    font-weight: 500;
    color:var(--ticket_button_color) ;
    text-decoration: none;
}

/*quote area*/

.quote_area{
    background-color: var(--menu_color_navigation);
    padding: 50px 0 50px 0;
}

.quote_area img {
    width: var(--width-12col);
    height: auto;
    background-size: cover;
    background-position: center center;
    display: flex;
    align-items: center;
    margin: 0 auto;
}

.quote_area p {
    font-family: 'Eagle Lake', cursive;
    font-size: 48px;
    text-align: center;
    font-weight: 400;
    text-shadow: 
    -2px -2px 0 var(--white_color),
     2px -2px 0 var(--white_color),
    -2px  2px 0 var(--white_color),
     2px  2px 0 var(--white_color);
}

/*video area*/
.video_area {
    width: 100%;
    height: 620px;
    background-color:var(--background_color_green) ;
}
/*footer area*/
.footer_image {
    position: relative;
    width: 100%;
    height: 700px;
    background-image: url('../images/footer.png');
    background-size: cover;
    background-position: center bottom;
    background-repeat: no-repeat;
}

.footer_info{
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    gap: var(--grid_gap); 
    width: var(--width-12col);
    height: 40%;
    position: absolute;
    left: 50%;
    top: 80%;
    transform: translate(-50%, -50%);
    align-items: center;
}

.musikhuset {
    height: 56px;
    max-height: 56px;
    width: auto;
    grid-column: 1/3;
}

.skarn {
    height: 45px;
    max-height: 45px;
    width: auto;
    grid-column: 3/6;
}

.line {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 1px;
    height: 126px;
    background: var(--white_color);
    grid-column: 7/7;
}

.footer_info_socials {
    grid-column: 8/10;    
    display: flex;
    flex-direction: column;
}

.footer_info_socials_facebook a, .footer_info_socials_instagram a, .footer_info_socials_website a{
    display: flex;
    align-items: center;
    padding-bottom: 10px;
    text-decoration: none;
}

.footer_info_socials_facebook p, .footer_info_socials_instagram p, .footer_info_socials_website p {
    padding-left: 10px;
    font-family: 'Afacad';
    font-size: 15px;
    font-weight: 500;
    color: var(--clicked_color_navigation)
}

.footer_info_socials_facebook svg, .footer_info_socials_instagram svg, .footer_info_socials_website svg {
    color: var(--clicked_color_navigation);
    max-height: 30px;
} 

.footer_info_button {
    grid-column: 10/13;
}

.footer_info_button button {
    background-color: var(--clicked_color_navigation);
    border-radius: 10px;
    height: 45px;
    width: 250px;
    border: none;
}

.footer_info_button button a {
    font-family: 'Afacad';
    font-size: 16px;
    text-transform: uppercase;
    font-weight: 500;
    color:var(--ticket_button_color) ;
    text-decoration: none;
}

/* contact page */



.contact_about {

    display: grid;
    grid-template-columns: repeat(12, 1fr);
    max-width: 1200px;     
    margin: 0 auto; 
    padding: 130px 0 20px 0;       
    gap: 20px;
    align-items: center;

}

.about_text {
    grid-column: 1 / span 12;
    text-align: center;
    
}

.about_text h2 {
   font-family: 'Eagle Lake';
    font-size: 50px;
    font-weight: 400;
    color: var(--headline_hero_color);
    margin: 0;
   
}

.text_about_block {
   grid-column: 3 / span 8;
    display: flex;
    flex-direction: column;
    gap: 30px;
    font-size: 20px;
    font-family: 'Afacad';

}

/* carousel section */
.photo_carousel {
    width: 700px;
    margin: 0 auto;
    padding: 10px 0;
    position: relative;

}

.photo_carousel input {
    display: none;
}

.photo_carousel_inside {
    width: 500%;
    display: flex;
    transition: 1s;
}

.photo_carousel_item {
    width: 20%;
    padding: 50px;
}

.photo_carousel_item img {
    width: 600px;
    height: auto;
    border-radius: 20px;
}

#photo1:checked ~ .photo_carousel_inside {
    transform: translateX(0%);
}

#photo2:checked ~ .photo_carousel_inside {
    transform: translateX(-20%);
}

#photo3:checked ~ .photo_carousel_inside {
    transform: translateX(-40%);
}

#photo4:checked ~ .photo_carousel_inside {
    transform: translateX(-60%);
}

#photo5:checked ~ .photo_carousel_inside {
    transform: translateX(-80%);
}
/* ... */

